# dx12

./: .clang-format  .gitignore  CMakeLists.txt
Benchmark/: GameTimerBenchmarkTest.cpp
Source/: imgui.ini
Source/Models/: UpgradedKleinerToilet.fbx  drone_simple.fbx  ironpod.fbx  spinner.fbx
Source/Private/App/: App.cpp  BaseSceneObject.cpp  Camera.cpp  CameraController.cpp  KeyboardController.cpp  MainController.cpp  MouseController.cpp  Scene.cpp
Source/Private/Components/: BoundComponent.cpp  MovementComponent.cpp  SceneComponent.cpp  SkeletalMeshComponent.cpp  StaticMeshComponent.cpp
Source/Private/Graphic/: AssimpLoader.cpp  BlurFilter.cpp  CommandAllocator.cpp  CommandList.cpp  CommandManager.cpp  CommandQueue.cpp  D3D12Utils.cpp  DescriptorHeapAllocator.cpp  DescriptorHeapManager.cpp  DescriptorManager.cpp  Device.cpp  FrameResource.cpp  FrameResourceManager.cpp  GeometryGenerator.cpp  GeometryLoader.cpp  GpuResource.cpp  Graphic.cpp  GraphicEngine.cpp  GraphicError.cpp  InputLayout.cpp  InputLayoutManager.cpp  Material.cpp  MaterialBuilder.cpp  Pso.cpp  PsoManager.cpp  RenderTarget.cpp  Renderer.cpp  ResourceManager.cpp  RootSignature.cpp  RootSignatureManager.cpp  ScissorRect.cpp  Shader.cpp  ShaderManager.cpp  ShapeGeometryBuilder.cpp  SobelFilter.cpp  SwapChain.cpp  TextureCreator.cpp  Viewport.cpp
Source/Private/Graphic/GpuResources/: Buffer.cpp  DepthStencil.cpp  GpuResource.cpp  IndexBuffer.cpp  RenderTarget.cpp  Texture.cpp  VertexBuffer.cpp
Source/Private/Imgui/: ImguiWrapper.cpp
Source/Private/Render/: GeometryManager.cpp  Material.cpp  MaterialManager.cpp  MeshGeometry.cpp  PrimitiveGeometryBuilder.cpp  ResourceManager.cpp  StaticMesh.cpp  StaticMeshFactory.cpp  Texture.cpp  TextureManager.cpp
Source/Private/Scene/: BaseSceneObject.cpp  DrawableObject.cpp  GpuWaves.cpp  MovableObject.cpp  PrimitiveSceneObject.cpp  Scene.cpp  TreesSceneObject.cpp  Waves.cpp  WavesSceneObject.cpp
Source/Private/Utils/: AssimpLoader.cpp  DDSTextureLoader.cpp  GameTimer.cpp  GameTimerCr.cpp  GameTimerCr1.cpp  GameTimerCr2.cpp  GameTimerW.cpp  MathHelper.cpp  TinyObjLoaderWrapper.cpp  VectorDK.cpp
Source/Private/Utils/Math/: EulerAngles.cpp  Quat.cpp  Rotator.cpp  Vector.cpp
Source/Private/Window/: Keyboard.cpp  Mouse.cpp  WindowDK.cpp  main.cpp
Source/Public/: Helper.h
Source/Public/App/: App.h  BaseSceneObject.h  Camera.h  CameraController.h  KeyboardController.h  MainController.h  MouseController.h  Scene.h  Settings.h  SettingsManager.h
Source/Public/Components/: BaseComponent.h  BoundComponent.h  MeshComponent.h  MovementComponent.h  SceneComponent.h  SkeletalMeshComponent.h  StaticMeshComponent.h
Source/Public/Graphic/: AssimpLoader.h  BlurFilter.h  CommandAllocator.h  CommandList.h  CommandManager.h  CommandQueue.h  D3D12Utils.h  DescriptorHeapAllocator.h  DescriptorHeapManager.h  DescriptorManager.h  Device.h  DeviceManager.h  FrameResource.h  FrameResourceManager.h  GeometryGenerator.h  GeometryLoader.h  GpuResource.h  Graphic.h  GraphicCommonHeaders.h  GraphicCommonStructs.h  GraphicEngine.h  GraphicError.h  GraphicGlobals.h  InputLayout.h  InputLayoutManager.h  Material.h  MaterialBuilder.h  Pso.h  PsoManager.h  RenderItem.h  RenderTarget.h  Renderer.h  ResourceManager.h  RootSignature.h  RootSignatureManager.h  ScissorRect.h  Shader.h  ShaderManager.h  ShapeGeometryBuilder.h  SobelFilter.h  (+6 more)
Source/Public/Graphic/GpuResources/: Buffer.h  DepthStencil.h  GpuResource.h  IndexBuffer.h  RenderTarget.h  Texture.h  UploadBuffer.h  VertexBuffer.h
Source/Public/Imgui/: ImguiWrapper.h
Source/Public/Render/: GeoRenderData.h  GeometryCommon.h  GeometryLoader.h  GeometryManager.h  Material.h  MaterialManager.h  Mesh.h  MeshGeometry.h  PrimitiveGeometryBuilder.h  RenderData.h  ResourceManager.h  SkeletalMesh.h  StaticMesh.h  StaticMeshFactory.h  Texture.h  TextureManager.h
Source/Public/Scene/: BaseSceneObject.h  DrawableObject.h  GpuWaves.h  MovableObject.h  PrimitiveSceneObject.h  Scene.h  SceneManager.h  SceneObject.h  TreesSceneObject.h  Waves.h  WavesSceneObject.h
Source/Public/Utils/: DDSTextureLoader.h  Delegate.h  EventManager.h  GameTimer.h  GameTimerCr.h  GameTimerCr1.h  GameTimerCr2.h  GameTimerW.h  Logger.h  PixProfile.h  Profiler.h  ScopedEventHandler.h  TinyObjLoaderWrapper.h  VectorDK.h
Source/Public/Utils/Math/: EulerAngles.h  MathDK.h  MathHelper.h  Quat.h  Rotator.h  Transform.h  Vector.h
Source/Public/Window/: Keyboard.h  Mouse.h  WinDK.h  WindowDK.h  WindowInfo.h
Source/Shaders/: BarycentricInterpolate.hlsl  BilateralFilter.hlsl  Blur.hlsl  Color.hlsl  CommonRoot.hlsl  Default.hlsl  GeometrySubdivide.hlsl  Sky.hlsl  TessellationQuad.hlsl  TessellationTri.hlsl  TessellationTriFracEven.hlsl  TessellationTriFracOdd.hlsl  TessellationTriPow.hlsl  ThreeSprite.hlsl
Source/Textures/: coldfire.dds  default.dds  fireball.dds  grassx.dds  grassy.dds  metall.dds  tile1.dds
Source/Window/: Mouse.cpp  WinDK.h  WindowDK.cpp  WindowDK.h  main.cpp
Test/: GameTimerTests.cpp  QuatTests.cpp  RotatorTests.cpp  Test.cpp  VectorTests.cpp
